--- a/index.html
+++ b/index.html
@@ -5,20 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>game</title>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    
-<
+
 <div id="game" onclick="jump()">
 
     <div id="player"></div>
-
     <div id="cenary"></div>
-
     <div id="cenary2"></div>
-
     <div id="obstacle"></div>
 
     <a  href="" id="retry" onclick="reload()"></a>
@@ -27,5 +22,5 @@
 
 
 </body>
-<script src="game.js"></script>
+<script src="script.js"></script>
 </html>
